--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,6 @@
 setfit>=1.0.0
 datasets>=2.14.0
 torch>=2.0.0
-transformers>=4.30.0
+transformers>=4.30.0,<5.0.0  # setfit 1.1.x requires <5.0
 sentence-transformers>=2.2.0
 python-dotenv>=1.0.0
