--- a/email_classifier_brain/.gitignore
+++ b/email_classifier_brain/.gitignore
@@ -12,7 +12,7 @@ build/
 venv/
 env/
 
-# Trained model output (use Git LFS if you want to version the model)
+# Trained model output (synced via Google Drive, not Git)
 model/
 
 # IDE / Editor
