--- a/email_classifier_brain/.env.example
+++ b/email_classifier_brain/.env.example
@@ -19,8 +19,8 @@ IMAP_BATCH_SIZE=50
 # Where the trained model lives (default: sibling data repo)
 MODEL_DIR=../email_classifier_data/model
 # Where training data JSON files live (default: local TrainingData/ with examples).
-# In production, uncomment this to point at your private data repo:
-# TRAINING_DATA_DIR=../email_classifier_data/TrainingData
+# In production, uncomment this to point at your private data repo root:
+# TRAINING_DATA_DIR=../email_classifier_data
 
 # ---------------------------------------------------------------------------
 # Google Drive Model Sync (rclone)
