Added GDrive syncing for database

--- a/email_classifier_brain/.env.example
+++ b/email_classifier_brain/.env.example
@@ -31,5 +31,11 @@ MODEL_DIR=../email_classifier_data/model
 # ---------------------------------------------------------------------------
 # Remote name as configured in `rclone config`
 GDRIVE_REMOTE=gdrive
-# Folder path within Google Drive
+# Folder path within Google Drive for model
 GDRIVE_MODEL_PATH=email-classifier-model
+# Folder path within Google Drive for storage (database)
+GDRIVE_STORAGE_PATH=email-classifier-storage
+
+# Local Storage (Database)
+# STORAGE_DIR=storage
+# DB_PATH=storage/email_history.db
